# education-atlas

./: .gitignore  .zenodo.json  NOTICE  README.md  pyproject.toml
analysis/landscape/: build_access.py  build_expansion.py  build_geographic.py  build_historical.py  make_figures.py  make_figures_expansion.py  make_figures_geographic.py  make_figures_modality.py  results.json  results_expansion.json  results_geographic.json  results_historical.json  scale.py  test_access.py  test_expansion.py  test_geographic.py
data/: MANIFEST.json
data/landscape/: solutions.csv
docs/: EDUCATION_PROBLEMS.md  REFORM_THESIS.md  THE-KNOWLEDGE-ACCESS-GRADIENT.md  THE-KNOWLEDGE-ACCESS-GRADIENT.zenodo.json  VALIDATION.md  findings.json
docs/deep/: 01-us-education-and-innovation.md  02-world-tiers-and-the-industrial-model.md  03-what-systems-lack-learning-to-learn.md  04-health-learning-and-the-ceiling.md
docs/foundations/: 01-what-it-means-to-be-educated.md  02-goals-of-education-and-their-evolution.md  03-cheating-and-academic-integrity.md  04-ai-and-the-future-of-education.md
docs/landscape/: 01-solution-landscape.md  02-access-data-science.md  03-map-expansion.md  04-knowledge-gatekeeping-and-what-works.md  05-geographic-access.md  (+2 more)
edu/: __init__.py  indicators.py  manifest.py  problems.py  schema.py
scripts/: build_all.py  build_db.py  build_gradient_pdf.py  build_report_pdf.py  build_sample.py  findings.py  query.py  validate.py
tests/: test_indicators.py  test_other_normalizers.py  test_problems.py  test_schema.py  test_validate.py  test_worldbank_normalizer.py
(+10 files in other folders)
