[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "education-atlas"
version = "0.1.0"
description = "A data-grounded map of educational problems by country and level, against SDG 4."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gianangelo Dichio" }]
maintainers = [{ name = "bucket-foundation" }]
keywords = ["education", "sdg4", "learning-poverty", "out-of-school",
            "world-bank", "unesco", "pisa", "open-data", "education-reform"]
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "duckdb>=0.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
paper = ["weasyprint>=60"]

[project.urls]
Homepage = "https://github.com/bucket-foundation/education-atlas"
"Bucket Foundation" = "https://bucket.foundation"

[tool.setuptools]
packages = ["edu", "edu.connectors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
